<resources>
    <string name="app_name">QuejaApp</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnNuevaPQRS">Nueva PQRS</string>
    <string name="btnBuscarPQRS">Buscar</string>
    <string name="btnSalir">Salir</string>
    <string name="btnAtras">Atras</string>
    <string name="btnCancelar">X</string>
    <string name="btContinuar">Continuar</string>
    <string name="btnAgregarFoto">Añadir Foto</string>
    <string name="btnAgregarArchivo">Añadir Archivo</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnBuscarPQRSDos">Buscar</string>
    <!--Strings para los text view -->
    <string name="txtvwNombreUsuario">Nombre de Usuario o Correo</string>
    <string name="txtvwClaveUsuario">Contraseña</string>
    <string name="txtvwCrearPQRS">Registrar PQRS</string>
    <string name="txtvwDatosBasicos">Datos Usuario</string>
    <string name="txtvwNombreCompleto">Nombres</string>
    <string name="txtvwApellidos">Apellidos</string>
    <string name="txtvwTipoDocumento">Tipo Documento</string>
    <string name="txtvwNumeroDocumento">Numero de documento</string>
    <string name="txtvwRegional">Regional</string>
    <string name="txtvwCentro">Centro</string>
    <string name="txtvwSede">Sede</string>
    <string name="txtvwNumeroFicha">Número de Ficha</string>
    <string name="txtvwTipoPQRS">Tipo PQRS</string>
    <string name="txtvwTipoCategoriaPQRS">Categoria PQRS</string>
    <string name="txtvwTemaPQRS">Tema PQRS</string>
    <string name="txtvwDescripcion">Descripción</string>
    <string name="txtvwBuscarPQRS">Buscar</string>
    <string name="txtvwTituloBuscarPQRS">Buscar PQRS</string>
    <string name="txtvwTituloRegistroUsuario">Registrarse</string>

    <string name="txtvwSolicitudNumero">Número solicitud</string>


    <string name="txtvwEstado">Estado de la PQRS</string>
    <string name="txtvwAreasEncargadas">Área encargada</string>
    <string name="txtFechaRespuesta">Fecha de respuesta</string>
    <string name="txtvwComentarios">Comentarios</string>

    <string name="txvwRegistrarse">Registrarse</string>


    <!--Strings para el logotipo-->
    <string name="imgLogoDescription">Logotipo_Quejapp</string>
    <string name="imgLogoSenaDescription">Logotipo_Quejapp</string>

    <string name="FontFamilyQuejapp">Verdana</string>
    <string name="txtvwTituloPqrs">PQRS</string>
    <string name="txtvwTituloCrearPqrs">Registrar PQRS</string>
    <string name="txtvwSbtituloPqrs">Peticiones, Quejas, Reclamos, Sugerencias</string>
    <string name="cbxAnonimo">Anonimo</string>

    <string name="txvTituloRegistro">Registrate</string>

    <!--Strings para los items del action bar-->
    <string name="item_login">Login</string>
    <string name="item_registrar">Registrar PQRS</string>
    <string name="item_buscar">Buscar PQRS</string>
    <string name="item_registro">Registro de Usuario</string>
    <string name="edtNumeroFicha">Nùmero de Ficha</string>

    <string name="edtContraseña">Contraseña</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="imgLogoUsuario">imLogoUser</string>
    <string name="title_activity_menu__principal">Menu Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imglogosplash">imgLogoSplash</string>
    <string name="txvCargando">Cargando</string>
    <string name="txvInfoInicial">Apreciado ciudadano,
        por medio del sistema de PQRSF usted podrá presentar
        peticiones, quejas respetuosas, reclamos,sugerencias,
        felicitaciones y consultar las mismas.
        Nos comprometemos a atender su solicitud,
        por lo que requerimos tenga en cuenta los siguientes
        puntos antes de registrarla:</string>
    <string name="txvInfoPeticionTitulo">Peticion</string>
        <string name="txvInfoPeticion">Petición: Son las actuaciones, solicitudes o requerimientos
            que hace por primera vez los grupos de interes externos de la entidad y los cuales son
            dirigidos de forma respetuosa al SENA o a un Colaborador SENA con el proposito de requerir
            su intervencion al respecto.
</string>

    <string name="txvQuejaTitulo">Queja o Denuncia</string>
        <string name="txvInfoQueja">
            Queja o denuncia: Es la manifestación de No-Conformidad, insatisfacción,
            desagrado o descontento que un Ciudadano pone en conocimiento del SENA,
            por conductas irregulares realizadas por sus Colaboradores SENA en
            cumplimiento de sus funciones o por particulares que tiene
            a su cargo la prestación de un servicio público de la entidad.
</string>

    <string name="txvReclamoTitulo">Reclamo</string>

<string name="txvInfoReclamo">
    Reclamo: Es una exigencia que realiza un Ciudadano
    por ausencia irregular o mala prestación de un servicio
    despues de que la entidad ha prestado el mismo, por una
    obligación incumplida o por la prestación deficiente de una
    función a cargo del SENA.
</string>

    <string name="txvSugerenciaTitulo">Sugerencia</string>
<string name="txvInfoSugerencia">
     Sugerencia: Es una proposición, insinuación, indicación o propuesta
     que se presenta con el objetivo de sugerir una acción para adecuar
     o mejorar algún servicio, producto o proceso de la Entidad.

</string>
    <string name="ic_more_info">ic_more_info</string>
    <string name="txv_info_adicional">Para tramitar una nueva PQRSF haga clic en el boton</string>
    <string name="ic_menu_ayuda">ic_menu_ayuda</string>
    <string name="txv_info_adicional2">En la parte superior izquierda de la pantalla</string>

</resources>