<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/registro_pqrs"
            android:icon="@drawable/nuevaqueja"
            android:title="@string/item_registrar" />
        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/item_login" />
        <item
            android:id="@+id/buscar_pqrs_fragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="Buscar Pqrs" />
        <item
            android:id="@+id/registro_fragment"
            android:icon="@drawable/usuario"
            android:title="@string/txvTituloRegistro" />
    </group>


</menu>
