<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_toolbar"
    android:paddingLeft="@dimen/activity_horizontal_margin_toolbar"
    android:paddingRight="@dimen/activity_horizontal_margin_toolbar"
    android:paddingTop="@dimen/activity_vertical_margin_toolbar"
    tools:context="com.example.chaquen.quejaappsena.RegistrarPqrs"
    android:orientation="vertical">
    <!--Agregar una barra de herramientas -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="@dimen/spWidthTD"
                android:layout_height="@dimen/spHeightTD"
                android:layout_gravity="center"
                android:entries="@array/spnRegionalValues"/>
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/txtvwTitulosGrandesHeight"
        android:text="@string/txtvwCrearPQRS"
        android:layout_gravity="center_horizontal"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="@dimen/txtvwTitulosGrandesWidth"
                android:layout_height="@dimen/txtvwTitulosGrandesHeight"
                android:text="@string/txtvwTipoCategoriaPQRS"/>
            <Spinner
                android:layout_width="@dimen/spWidth"
                android:layout_height="@dimen/spHeight"></Spinner>
            <TextView
                android:layout_width="@dimen/txtvwTitulosGrandesWidth"
                android:layout_height="@dimen/txtvwTitulosGrandesHeight"
                android:text="@string/txtvwTipoPQRS"
                android:id="@+id/txtVwTipoPqrs" />
            <Spinner
                android:layout_width="@dimen/spWidth"
                android:layout_height="@dimen/spHeight"></Spinner>
            <TextView
                android:layout_width="@dimen/txtvwTitulosGrandesWidth"
                android:layout_height="@dimen/txtvwTitulosGrandesHeight"
                android:text="@string/txtvwTemaPQRS"/>
            <Spinner
                android:layout_width="@dimen/spWidth"
                android:layout_height="@dimen/spHeight"></Spinner>
            <TextView
                android:layout_width="@dimen/txtvwTitulosMedianosWidth"
                android:layout_height="@dimen/txtvwTitulosMedianosHeight"
                android:text="@string/txtvwCentro"/>
            <Spinner
                android:layout_width="@dimen/spWidth"
                android:layout_height="@dimen/spHeight"></Spinner>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/txtvwDescripcionFormDosWidth"
                    android:layout_height="@dimen/txtvwDescripcionFormDosHeight"
                    android:text="@string/txtvwDescripcion"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anonimo"
                    android:checked="true"
                    android:id="@+id/chbAnonimo"/>
            </LinearLayout>
            <EditText
                android:layout_width="@dimen/edTxtDescripcionFormDosWidth"
                android:layout_height="@dimen/edTxtDescripcionFormDosHeight"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btnAgregarEvidenciaHeight"
                android:text="@string/btnAgregarArchivo"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
