<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pqrs.sena.quejapp.buscar_pqrs_fragment"
    android:id="@+id/buscar_pqrs_fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtvwTituloBuscarPQRS"
                android:textSize="@dimen/txvwFontSizeTitulosMedianos"
                android:typeface="serif"
                android:textColor="@color/PrimaryColorQuejapp"
                android:textStyle="italic|bold"
                android:layout_gravity="center"
                style="@style/AppTheme"
                android:gravity="center"
                android:foregroundGravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LayoutStyleFields">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_marginBottom="@dimen/txtvwMedianosMarginButton"
                    style="@style/EditTextStyle"
                    android:hint="@string/txtvwNumeroDocumento"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LayoutStyleFields">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/txtvwNumeroFicha"
                    android:layout_marginBottom="@dimen/txtvwMedianosMarginButton"
                    style="@style/EditTextStyle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btnBuscarPQRSDos"
                    style="@style/ButtonStyle"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>
