<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pqrs.sena.quejapp.fragment_informacion_cardview"
    android:layout_margin="@dimen/activity_horizontal_margin"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/LayoutStyleFields">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/txvInfoInicial"
        style="@style/LayoutStyleTexts"/>
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/linearLayoutCardPeticion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/lyPeicion"
                style="@style/LayoutStyleTexts">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/txvInfoPeticionTitulo"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_more_info_2"
                        android:layout_weight="0.1"
                        android:layout_gravity="left"
                        android:id="@+id/ic_more_info_P"
                        android:contentDescription="@string/ic_more_info" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyDetallesPeticion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txvPeticionInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txvInfoPeticion"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        style="@style/LayoutStyleFields">

        <LinearLayout
            android:id="@+id/linearLayoutCardQueja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/lyQueja"
                style="@style/LayoutStyleTexts">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:text="@string/txvQuejaTitulo"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:layout_weight="0.1"
                        android:layout_gravity="left"
                        android:id="@+id/ic_more_info_Q"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyDetallesQueja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txvQuejaInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txvInfoQueja"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        style="@style/LayoutStyleFields">

        <LinearLayout
            android:id="@+id/linearLayoutCardReclamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/lyReclamo"
                style="@style/LayoutStyleTexts">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:text="@string/txvReclamoTitulo"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:layout_weight="0.1"
                        android:layout_gravity="left"
                        android:id="@+id/ic_more_info_R"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyDetallesReclamo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txvReclamoInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txvInfoReclamo"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        style="@style/LayoutStyleFields">

        <LinearLayout
            android:id="@+id/linearLayoutCardSugerencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/lySugerencia"
                style="@style/LayoutStyleTexts">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:gravity="center"
                        android:text="@string/txvSugerenciaTitulo"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        android:layout_weight="0.1"
                        android:layout_gravity="left"
                        android:id="@+id/ic_more_info_S"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyDetallesSugerencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="8dp"
                    android:visibility="gone">

                <TextView
                        android:id="@+id/txvSugerenciaInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txvInfoSugerencia"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_gravity="fill"/>
                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txv_info_adicional"
            android:layout_gravity="center"
            android:layout_weight="0.5"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_menu"
            android:contentDescription="@string/ic_menu_ayuda"
            android:layout_weight="0.5"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txv_info_adicional2"/>

    </LinearLayout>


</LinearLayout>

</FrameLayout>
